--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="flex flex-1">
 			<div class="about-me-info-container">
 				<figure class="about-me_picture-mask">
-					<img src="./img/progboy.jpg" class="about-me-image" alt="Picture">
+					<img src="progboy.jpg" class="about-me-image" alt="Picture">
 				</figure>
 				<h1 class="about-me-title">
 					Hey! I'm <span class="text-color">Sherwin Selma</span>
