--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="about_me_info-container">
 					<figure class="about_me_picture-mask">
 						<!-- image area -->
-						<img src="./img/progboy.jpg" class="about_me_picture" alt="">
+						<img src="progboy.jpg" class="about_me_picture" alt="">
 					</figure>
 					<h1 class="about_me_info-title">
 						Hey I'm <span class="text_color">Sherwin Selma </span><span class="wave">👋</span>
