--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					</div>
 					<div class="language">
 						<figure class="languages_img">
-							<img src="./img/java.jpg" class="language_img" alt="Java">
+							<img src="java.jpg" class="language_img" alt="Java">
 						</figure>
 						<span class="language_name">Java</span>
 					</div>
