--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</div>
 				<figure class="about_me_info_img-container">
 					<!-- second image file -->
-					<img src="./img/undrawDesign.png" class="about_me_info_img" alt="">
+					<img src="undrawDesign.png" class="about_me_info_img" alt="">
 				</figure>
 			</div>
 		</div>
